# Bin2Cpp

./: CMakeLists.txt  README.md  SourceCode.hpp  bin2cpp.cpp  sonar-project.properties
.github/workflows/: BuildLinux.yml  SonarCloud.yml  release.yaml
